# get-nwbfile-info

./: .gitignore  README.md  get_nwbfile_info.py  pyproject.toml
src/get_nwbfile_info/: __init__.py  cli.py  core.py
